--- a/style.css
+++ b/style.css
@@ -563,9 +563,11 @@ html {
     scroll-behavior: smooth;
 }
 
-.aroww {
+.arrow i{
     position: fixed;
-    background-color: #cf7720;
+    /* background-color: #cf7720; */
+    color: #fff;
+    font-size: 30px;
     border-radius: 50px;
     height: 50px;
     bottom: 40px;
@@ -573,4 +575,8 @@ html {
     text-decoration: none;
     text-align:center ;
     line-height: 50px;
+}
+
+.arrow i:hover {
+    color: #cf7720;
 }
